update _config and _post

--- a/_posts/2022-03-17-begin.md
+++ b/_posts/2022-03-17-begin.md
@@ -3,8 +3,7 @@ layout: post
 title: "Opening"
 date: 2022-03-17 04:17:00
 description: Here you'll find why I make this blog.
-tags: 
- - general
+tags: general
 toc: true
 ---
 ## Opening
@@ -30,14 +29,14 @@ Markdown을 더 깊이 사용하고
 
 {% highlight bash %}
 {% raw %}
-# 빈 directory에서 가능합니다.
+`# 빈 directory에서 가능합니다.`
 jekyll new .
 {% endraw %}
 {% endhighlight %}
 
 {% highlight bash %}
 {% raw %}
-# 빈 directory가 아니라면
+`# 빈 directory가 아니라면`
 jekyll new . --force
 {% endraw %}
 {% endhighlight %}
