--- a/_posts/2016-07-01-images.md
+++ b/_posts/2016-07-01-images.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Images"
+title: "Images by Pavel Makhov"
 date: 2016-07-01 16:25:06
 tags: reference
 description: Sample post showing how to use images
