--- a/_posts/2016-09-16-be-social.md
+++ b/_posts/2016-09-16-be-social.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Be social"
+title: "Be social by Pavel Makhov"
 date: 2016-09-15 16:25:06
 description: Built-in share buttons!
 share: true
