add a tag python

--- a/_posts/2022-03-17-begin.md
+++ b/_posts/2022-03-17-begin.md
@@ -3,7 +3,7 @@ layout: post
 title: Opening
 date: 2022-03-17 04:17:00
 description: Here you'll find why I make this blog.
-tags: opening
+tags: opening   python
 toc: true
 ---
 
