--- a/_posts/2022-03-17-begin.md
+++ b/_posts/2022-03-17-begin.md
@@ -3,11 +3,11 @@ layout: post
 title: Opening
 date: 2022-03-17 04:17:00
 description: Here you'll find why I make this blog.
-tags: opening   python
-toc: true
+tags: opening
 ---
 
 ## Opening
+
 개발 공부는 퍼즐을 맞추는 것과 비슷한 것 같습니다.
 여기저기서 흥미로운 퍼즐세트`(새로운 기술)`가 나타나며 새로운 퍼즐을 경험하는 것은 즐거운 일입니다.
 
@@ -16,16 +16,19 @@ toc: true
 이 블로그는 제가 맞추고 있는 여러 퍼즐세트를 정리하기 위한 장소입니다.
 
 ## To make this happen
+
 이 블로그는 
 - github pages
 - jekyll-clean-dark theme
 로 시작했습니다.
 
 ## In the future
+
 Markdown을 더 깊이 사용하고
 블로그에 추가적인 기능을 추가할 예정입니다.(e.g., 댓글)
 
 ## Remember
+
 블로그를 만들기 위해 기본 jekyll을 받아서 연습해보면서 적어두고 싶었던 것
 
 {% highlight bash %}
