adjust begin.md

--- a/_posts/2022-03-17-begin.md
+++ b/_posts/2022-03-17-begin.md
@@ -46,4 +46,4 @@ jekyll new . --force
 {% endraw %}
 {% endhighlight %}
 
-그리고 <html> <header> 에 <html lang="en-us">이 맞는지 꼭 확인해야겠다.
+그리고 `html > header` 에 `html lang="en-us"` 이 맞는지 꼭 확인해야겠다.
