--- a/_posts/2022-03-16-begin.md
+++ b/_posts/2022-03-16-begin.md
@@ -10,6 +10,9 @@ tags: opening
 한 퍼즐 세트를 맞추다 보면 새로운 퍼즐 세트가 나타나고
 그러면, 맞추던 퍼즐 세트는 잠시 두고 새로운 퍼즐 세트를 맞추고있는 제 모습을 보곤 합니다.
 
+>어지럽게 얽힌 퍼즐을 잘 정리하고 기억하기 위해 블로그를 시작하게 됐습니다. 
+{: .note}
+
 ## To make this happen
 
 이 블로그는...
