--- a/_posts/2022-03-17-aws-iam.md
+++ b/_posts/2022-03-17-aws-iam.md
@@ -102,7 +102,7 @@ Set of permissions라고 할 수 있겠습니다.
 한 계정에 여러 permissions가 필요할 경우 하나하나 지정해주기 힘든데
 Role에 한번 지정해두면 여러 계정에 한번에 적용하기가 용이합니다.
 
-## Security Tolls
+## Security Tools
 1. IAM Credentials Report (계정 단위)
 - 모든 계정의 credentaial 정보 리스트
 2. IAM Access Advisor (유저 단위)
