add about ssh to aws ec2 post

--- a/_posts/2022-03-20-aws-ec2.md
+++ b/_posts/2022-03-20-aws-ec2.md
@@ -69,6 +69,16 @@ EC2에서 고려해야하는 Configuration은 다음과 같다.
 # SSH
 우리로 하여금 remote machine을 제어할 수 있도록 해준다.
 
+> ## SSH를 통한 machine 접근법 1 - command prompt
+> EC2 Instance를 만들때 Key Pair(RSA)를 다운받습니다. (확장자 pem)
+> EC2 Instance의 Public IPv4 DNS를 복사합니다. (ec2-`x-xx-xxx-xx`.region-name에서도 확인할 수 있습니다.)
+> chmod 0400 (파일이름).pem 을 통해서 pem파일에 permission을 줍니다.
+> ssh -i (파일이름).pem ec2-user@`x.xx.xxx.xx`
+
+> ## SSH를 통한 machine 접근법 2 - AWS Instance Connet
+> AWS Console > EC2 > Instances > click a instance > Connect button > type user name > click Connect button
+> 접근법 1에서 햇던 chmod, ssh 같은 명령어 입력 없이 끝난다.
+
 # Purchasing Options
 1. On-Demand Instances - 짧은/un-interrupted workload와 예상가능한 pricing에 적합하다.
 2. Reserved - 1년/3년 options, long workload에 적합하다.
