--- a/_posts/2022-03-17-aws-iam.md
+++ b/_posts/2022-03-17-aws-iam.md
@@ -51,7 +51,7 @@ AZs는 Region안에 존재한다. (최소 2개, 최대 6개, 보통 3개)
 
 ## Global service
 글로벌 서비스로 특정 Region에서 설정할 필요가 없습니다. (사실 Region을 선택도 할 수 없었다.)
-![img]({{ '/assets/images/aws-iam-01.png' | relative_url }}){: .center-image }*(°0°)*
+![img]({{ '/assets/images/aws-iam-01.png' | relative_url }}){: .center-image }Global
 >글로벌로 제공되는 AWS 서비스의 예시
 > - IAM
 > - Route 53(DNS service)
