--- a/_posts/aws/2022-03-20-aws-ec2.md
+++ b/_posts/aws/2022-03-20-aws-ec2.md
@@ -4,6 +4,7 @@ title: AWS Certified Developer Prep - 2 (Aamazon EC2)
 date: 2022-03-20 01:01
 tags: aws
 toc: true
+description: Amazon EC2에 대해서 알아보자.
 ---
 여기 정리하는 내용들은 Udemy 강의를 통해 배운 내용들을 정리하였습니다.
 `출처 - Udemy AWS Certified Developer Associate 2022 - New!`
