post programmers first problem solving

--- a/_posts/problem_solving/programmers/코딩테스트_연습/로또의 최고 순위와 최저 순위.md
+++ b/_posts/problem_solving/programmers/코딩테스트_연습/로또의 최고 순위와 최저 순위.md
@@ -6,4 +6,90 @@ tags: python problem_solving
 description: solve Programmers 코딩테스트 연습 lv1 문제
 ---
 
-# 문제
+## 문제
+
+
+
+## 문제 풀이
+swift 문법이 궁금하던 때에 사용한 코드입니다.
+
+{% highlight swift %}
+import Foundation
+
+func evaluate(n : Int) ->Int {
+    if n == 6 {
+        return 1
+    } else if n == 5{
+        return 2
+    } else if n == 4{
+        return 3
+    } else if n == 3{
+        return 4
+    } else if n == 2{
+        return 5
+    } else {
+        return 6
+    }
+}
+
+func solution(_ lottos:[Int], _ win_nums:[Int]) -> [Int] {
+    // set a list of final answer
+    var answer = [Int]()
+    
+    // set an int for a number of matched numbers
+    var NofMatched = 0 // NofMatched == worst case
+    var NofZeros = 0
+    
+    for lotto in lottos {
+        if lotto != 0 {
+            for win_num in win_nums {
+                if win_num == lotto {
+                    NofMatched += 1
+                }
+            }
+        } else { // count number of zeros in lottos
+            NofZeros += 1
+        }
+    }
+    
+    let bestCase = NofMatched+NofZeros 
+    answer.append(evaluate(n: bestCase))
+    answer.append(evaluate(n: NofMatched))
+    return answer
+}
+{% endhighlight %}
+
+위 코드를 python3으로 바꿔서 작성해보자. 바꾸면서 개선 가능한 부분도 개선해보자.
+
+{% highlight python %}
+{% raw %}
+
+# 매칭된 숫자의 개수(n)에 따른 순위를 return하는 함수 (개선됨)
+# if,elif,else 문에 패턴이 존재합니다. return값은 7-n
+def evaluate(n) :
+    if n == 0 :
+        return 6
+    return 7-n
+
+def solution(lottos, win_nums) :
+    answer = []
+    # worst case
+    nOfMatched = 0
+    nOfZeros = 0
+
+    # 매칭된 개수와 Zero가 몇개인지 찾는 로직 (개선 방법이 있을 것으로 보입니다.)
+    for lotto in lottos:
+        if lotto != 0 :
+            for win_num in win_nums:
+                if win_num == lotto :
+                    nOfMatched += 1
+        else:
+            nOfZeros += 1
+    
+    bestCase = nOfMatched + nOfZeros
+    answer.append(evaluate(bestCase))
+    answer.append(evaluate(nOfMatched))
+
+    return answer
+{% endraw %}
+{% endhighlight %}
