update first problem solving

--- a/_posts/problem_solving/programmers/코딩테스트_연습/로또의 최고 순위와 최저 순위.md
+++ b/_posts/problem_solving/programmers/코딩테스트_연습/로또의 최고 순위와 최저 순위.md
@@ -8,6 +8,34 @@ description: solve Programmers 코딩테스트 연습 lv1 문제
 
 ## 문제
 
+1부터 45까지의 숫자 중 6개를 찍어서 맞히는 대표적인 복권이 있습니다.
+맞힌 개수 - 순위
+6 - 1위
+5 - 2위
+4 - 3위
+3 - 4위
+2 - 5위
+그 외 - 6위(낙첨)
+
+고른 숫자중 알아볼 수 없는 숫자는 0으로 표기됩니다.
+
+모든 0이 맞았다면 최고 점수가
+모든 0이 틀렸다면 최저 점수가 나옵니다.
+
+로또 번호를 담은 배열 : lottos
+당첨 번호를 담은 배열 : win_nums
+당첨 가능한 최고 순위와 최저 순위를 차례대로 담은 배열을 return하라
+
+## 제한사항
+- lottos는 길이 6인 정수 배열입니다.
+- lottos의 모든 원소는 0 이상 45 이하인 정수입니다.
+    - 0은 알아볼 수 없는 숫자를 의미합니다.
+    - 0을 제외한 다른 숫자들은 lottos에 2개 이상 담겨있지 않습니다.
+    - lottos의 원소들은 정렬되어 있지 않을 수도 있습니다.
+- win_nums은 길이 6인 정수 배열입니다.
+- win_nums의 모든 원소는 1 이상 45 이하인 정수입니다.
+    - win_nums에는 같은 숫자가 2개 이상 담겨있지 않습니다.
+    - win_nums의 원소들은 정렬되어 있지 않을 수도 있습니다.
 
 
 ## 문제 풀이
