update first problem solving problem

--- a/_posts/problem_solving/programmers/코딩테스트_연습/로또의 최고 순위와 최저 순위.md
+++ b/_posts/problem_solving/programmers/코딩테스트_연습/로또의 최고 순위와 최저 순위.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "로또의 최고 순위와 최저 순위 - Programmers 코딩테스트 연습 문제"
+title: 로또의 최고 순위와 최저 순위 - Programmers 코딩테스트 연습 문제
 date: 2022-03-21 03:01
 tags: python problem_solving
 description: solve Programmers 코딩테스트 연습 lv1 문제
