--- a/_posts/aws/2022-03-23-aws-elb1.md
+++ b/_posts/aws/2022-03-23-aws-elb1.md
@@ -4,6 +4,7 @@ title: AWS Certified Developer Prep - 4-1 (ELB)
 date: 2022-03-23 01:01
 tags: aws
 toc: true
+description: Elastic Load Balancer에 대해서 배워보자. (1)
 ---
 
 여기 정리하는 내용들은 Udemy 강의를 통해 배운 내용들을 정리하였습니다.
