update linux, add reference

--- a/_posts/linux/2022-03-23-linux1.md
+++ b/_posts/linux/2022-03-23-linux1.md
@@ -27,7 +27,8 @@ tags: linux
 {% highlight %}
 docker run -it --name bash ubuntu
 # 여기서 run 은 image를 설치하고, 컨테이너를 만들고, 실행하는 keyword입니다.
-# -it 는
+# -it의 i 는 interactive모드 (input입력하면 output나옴)라는 뜻입니다.
+# -it의 t 는 tty를 사용한다는 뜻입니다. (tty은 linux/unix 디자인의 핵심이 되는 subsystem이라고 합니다.)
 # --name은 option인데 container의 이름을 결정합니다. (위 예시에서는 bash를 인자로 받고 --name이 없으면 Docker에서 random으로 이름을 지정해줍니다.)
 # ubuntu는 이미지 이름입니다.(ubuntu 특정 버전이 필요하다면 ubuntu:버전 을 써주시면 됩니다.)
 {% endhighlight %}
@@ -51,4 +52,6 @@ docker start 컨테이너이름
 docker attach 컨테이너이름
 {% endhighlight %}
 
-리눅스
+Reference
+[The TTY demystified](http://www.linusakesson.net/programming/tty/index.php)
+[졸린눈](https://sleepyeyes.tistory.com/67)
