--- a/_posts/linux/2022-03-23-linux1.md
+++ b/_posts/linux/2022-03-23-linux1.md
@@ -6,7 +6,7 @@ description: 도커로 Linxu환경 만들기
 tags: linux
 ---
 
-리눅스 포스팅을 시작하게 됐는데요. 이 포스팅은 주로 명령 Keyword에 대해서 다루지 않을까 싶습니다.
+리눅스 포스팅을 시작하게 됐는데요. 다른 공부를 하면서 Linux가 익숙하지만 더 깊이 있는 공부가 필요하다고 느껴서 시작하게 됐습니다.
 
 ## Docker 사용
 저는 mac을 사용하고 있고 Docker에 관심이 있어서, Linux 환경설정을 Docker로 해보았습니다.
