--- a/_posts/aws/2022-03-24-aws-elb2.md
+++ b/_posts/aws/2022-03-24-aws-elb2.md
@@ -115,3 +115,18 @@ SSL Certificate은 만료일(우리가 설정합니다.)이 있으며 자주 갱
 Multiple SSL Certificates를 한 웹서버에 로딩하는 문제점를 해결해줍니다. (이로써 서버는 multiple 웹사이트를 serve 할 수 있습니다.)
 > ALB 와 최신 버전 NLB, 그리고 CloudFront 에서만 지원됩니다.
 > CLB에서는 지원되지 않습니다.
+
+## Connection Draining
+사실 두가지의 이름을 가지고 있습니다.
+1. Connection Draining - for CLB
+2. Deregistration Delay - for ALB & NLB
+
+<br>
+
+그래서 Connection Draining의 개념은
+**instance가 de-registering 이거나 unhealthy일때 in-flight requests를 완료할 수 있게 시간을 주는 것입니다.**
+**동시에 새로 들어오는 request는 해당 instance가 아닌 다른 instance로 보냅니다.**
+
+<br>
+
+다음 post에는 Auto Scaling Groups(ASG)에 대해 post하겠습니다.
