update highlight because it needs a parameter

--- a/_posts/linux/2022-03-23-linux1.md
+++ b/_posts/linux/2022-03-23-linux1.md
@@ -24,7 +24,7 @@ tags: linux
 
 ## 2. Docker Ubuntu 이미지 받기
 
-{% highlight %}
+{% highlight bash %}
 docker run -it --name bash ubuntu
 # 여기서 run 은 image를 설치하고, 컨테이너를 만들고, 실행하는 keyword입니다.
 # -it의 i 는 interactive모드 (input입력하면 output나옴)라는 뜻입니다.
@@ -37,7 +37,7 @@ docker run -it --name bash ubuntu
 
 바로 ubuntu를 사용할 수 있게 되는데요.
 ubuntu에서 나가려면 아래와 같이 합니다.
-{% highlight %}
+{% highlight bash %}
 eixt
 {% endhighlight %}
 이 때 container 또한 stop 되는데요
@@ -45,7 +45,7 @@ eixt
 <br>
 
 다음에 실행할 때는 아래와 같이 합니다.
-{% highlight %}
+{% highlight bash %}
 # 컨테이너 실행
 docker start 컨테이너이름
 # 컨테이너에 접속/연결
