fix a typo on post linux1

--- a/_posts/linux/2022-03-23-linux1.md
+++ b/_posts/linux/2022-03-23-linux1.md
@@ -2,7 +2,7 @@
 layout: post
 title: Linux 환경 만들기 - 1 (w/ Docker)
 date: 2022-03-23 02:02:00
-description: 도커로 Linxu환경 만들기
+description: 도커로 Linux환경 만들기
 tags: linux
 ---
 
