update aws asg, post aws db

--- a/_posts/aws/2022-03-28-aws-asg.md
+++ b/_posts/aws/2022-03-28-aws-asg.md
@@ -6,6 +6,10 @@ tags: aws
 toc: true
 description: Auto Scaling Group 에 대해서 배워보자.
 ---
+여기 정리하는 내용들은 Udemy 강의를 통해 배운 내용들을 정리하였습니다.
+`출처 - Udemy AWS Certified Developer Associate 2022 - New!`
+
+<br>
 
 load의 증가 또는 감소 따라 EC2 instance를 더하거나 빼는 서비스입니다.
 Scale out/in 이라고 표현합니다.
