--- a/_posts/aws/2022-04-01-aws-db.md
+++ b/_posts/aws/2022-04-01-aws-db.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: AWS Certified Developer Prep - 6 (RDS/Aurora/ElastiCache)
+title: AWS Certified Developer Prep - 6 (RDS)
 date: 2022-04-01 01:01
 toc: true
 description: Database Service 에 대해서 알아봅시다.
@@ -11,7 +11,6 @@ tags: aws
 
 <br>
 
-# AWS RDS
 RDS는 Relational Database Service의 약자입니다. 그리고 SQL을 사용합니다.
 AWS RDS에서 여러 종류의 SQL을 허용하는데요. 아래와 같습니다.
 > - PostgreSQL
@@ -85,3 +84,43 @@ increase availability
 > Multi AZ를 탑재하기 위해서 DB를 stop 할 필요 없습니다. (zero downtime operation)
 > just click "modify" for the database
 > Multi AZ setup때는 DB snapshot이 자동으로 생성됩니다.
+
+# RDS Security - Encryption
+## At rest encryption
+Master & read replicas를 Encrypt 하기 위해 AWS KMS를 사용합니다.
+launch time에 define 해줘야합니다.
+master 먼저 encrypt해야만 read replicas도 encrypt할 수 있습니다.
+> Oracle and SQL Server은 Transparent Data Encryption(TDE)가 가능합니다. (Encryption의 다른 방법입니다.)
+
+## In-flight encryption
+SSL certificates를 사용합니다. in flight
+> Snapshot이 경우 기존 DB의 Encrypted 여부에 따라 Snapshot의 encryption이 정해진다.
+> 하지만 Unencrypted 된 것을 encrypt 할 수 있습니다.
+
+<br>
+
+> * un-encrypted RDS database 를 encrypt 하기
+> 1. the un-encrypted db 에서 snapshot을 생성한다.
+> 2. 그 snapshot 을 복제하고 and 복제된 snapshot이 encrypt가능하게 설정한다.
+> 3. encrypted 설정된 snapshot에서 db를 복구한다.
+> 4. 새로운 db에 Migrate Application한다. (un-encrypted db는 삭제한다.)
+
+<br>
+
+## RED Security - Network & IAM
+
+- Network Security
+    - RDS db를 private으로 deploy 합니다.
+    - security group을 통해 통제합니다.
+- Access Management
+    - IAM policy로 매니저를 정해줍니다.
+    - IAM-based authentication을 이용할 수 있습니다. (MySQL&PostgreSQL 같은 경우)
+        - 이 경우 password가 아닌 authentication toekn이 필요합니다.
+        - auth token은 15분 동안만 이용할 수 있습니다. 
+
+## Responsibility
+AWS는
+- 고객이 SSH access하지 못하도록 합니다.
+- 고객이 manual DB patching 못하게 합니다.
+- 고객이 manual OS patching 못하게 합니다.
+- 고객이 audi the underlying instance할 수 없게 합니다.
