update db, post db2

--- a/_posts/aws/2022-04-01-aws-db.md
+++ b/_posts/aws/2022-04-01-aws-db.md
@@ -123,4 +123,4 @@ AWS는
 - 고객이 SSH access하지 못하도록 합니다.
 - 고객이 manual DB patching 못하게 합니다.
 - 고객이 manual OS patching 못하게 합니다.
-- 고객이 audi the underlying instance할 수 없게 합니다.
+- 고객이 audit the underlying instance 를 할 수 없게 합니다.
