--- a/_posts/aws/2022-04-04-aws-db2.md
+++ b/_posts/aws/2022-04-04-aws-db2.md
@@ -21,6 +21,7 @@ AWS에서 제공하며 RDS에서의 MySQL이나, Postgres보터 높은 성능을
 - Shared storage Volume 이라고 Replication + Self Healing + Auto Expanding 의 기능을 제공할 수 있습니다.
 - master instance에서만 write이 가능합니다. (Single-master, 보편적) <> Multi-master를 사용하여 여러 instances에서 write을 할 수 있습니다.
 - Cross Region Replication 을 지원합니다.
+- 1 Aurora DB Cluster에 15개 까지 Aurora Read Replicas 만들 수 있습니다.
 
 <br>
 
