--- a/_posts/linux/2022-03-23-linux1.md
+++ b/_posts/linux/2022-03-23-linux1.md
@@ -38,7 +38,7 @@ docker run -it --name bash ubuntu
 바로 ubuntu를 사용할 수 있게 되는데요.
 ubuntu에서 나가려면 아래와 같이 합니다.
 {% highlight bash %}
-eixt
+exit
 {% endhighlight %}
 이 때 container 또한 stop 되는데요
 
